# confluence-fetcher

./: .gitignore  LICENSE  README.md  confluence_client.py  confluence_fetcher.py  pyproject.toml
docs/: Plan.md
